# corezen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  karotcam.spec  karotcam_prompt.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-29-karotcam-foundation.md
docs/superpowers/specs/: 2026-04-29-karotcam-foundation-design.md
karotcam/: __init__.py
karotcam/camera/: __init__.py  capture_worker.py  digicam_client.py  heartbeat.py  watcher_worker.py
karotcam/db/: backup.py  models.py  repository.py  schema.py
karotcam/gui/: main_window.py  styles.qss
karotcam/gui/i18n/: tr.json
karotcam/gui/widgets/: __init__.py  box_form.py  hole_picker.py  live_view.py  project_picker.py  recent_shots.py  shortcut_hints.py  status_bar.py
karotcam/utils/: __init__.py  filename.py  logger.py  nef_preview.py  session_state.py
tests/: MANUAL_SMOKE.md  conftest.py  test_backup.py  test_digicam_client.py  test_filename.py  test_repository.py  test_schema.py  test_session_state.py
