[project]
name = "karotcam"
version = "0.1.0"
description = "CoreZen / KarotCam — drilling core box photography for ESAN Balya & JEMAS Maroc"
requires-python = ">=3.11"
authors = [{name = "Esref Kaya"}]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
